<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_data"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@android:drawable/ic_menu_gallery" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_data">

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@android:color/darker_gray"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_address_tag"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_name_tag"
            app:layout_constraintStart_toEndOf="@id/view"
            tools:text="Emmett Dietrich" />

        <TextView
            android:id="@+id/tv_street_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name_tag" />

        <TextView
            android:id="@+id/tv_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_street_tag"
            app:layout_constraintStart_toEndOf="@id/view"
            tools:text="Bednar Crossroad" />

        <TextView
            android:id="@+id/tv_address_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_no"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_street_tag" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_address_tag"
            app:layout_constraintStart_toEndOf="@id/view"
            tools:text="2732" />

        <TextView
            android:id="@+id/tv_county_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/county"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_address_tag" />

        <TextView
            android:id="@+id/tv_county"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_county_tag"
            app:layout_constraintStart_toEndOf="@id/view"
            tools:text="Bedfordshire" />

        <TextView
            android:id="@+id/tv_city_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_county_tag" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_city_tag"
            app:layout_constraintStart_toEndOf="@id/view"
            tools:text="Palmdale" />

        <TextView
            android:id="@+id/tv_country_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_city_tag" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_country_tag"
            app:layout_constraintStart_toEndOf="@id/view"
            tools:text="Tonga" />

        <TextView
            android:id="@+id/tv_zipcode_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zip_code"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_country_tag" />

        <TextView
            android:id="@+id/tv_zipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_zipcode_tag"
            app:layout_constraintStart_toEndOf="@id/view"
            tools:text="38983" />

        <TextView
            android:id="@+id/tv_created_at_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_at"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_zipcode_tag" />

        <TextView
            android:id="@+id/tv_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_created_at_tag"
            app:layout_constraintStart_toEndOf="@id/view"
            tools:text="2024-08-25 21:17:00.287Z" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>